<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>disorg.soliloquy</groupId>
    <artifactId>inaugural.soliloquy.gamestate</artifactId>
    <version>0.0.169</version>
    <name>Inaugural Engine Gamestate Component</name>
    <description>Classes which keep track of the current state of the Game (rather than the rules of the Game)
    </description>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <release>18</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.4.0</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <useProjectReferences>false</useProjectReferences>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.12</version>
                <configuration>
                    <message>Creating site for ${project.version}</message>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>site</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>Soliloquy, Inaugural Engine, Gamestate Module</name>
            <uniqueVersion>false</uniqueVersion>
            <url>https://maven.pkg.github.com/felix-t-morgenstern/inaugural.soliloquy.gamestate</url>
        </repository>
        <snapshotRepository>
            <id>github</id>
            <name>Soliloquy, Inaugural Engine, Gamestate Module</name>
            <uniqueVersion>false</uniqueVersion>
            <url>file://${project.build.directory}/mvn-repo</url>
        </snapshotRepository>
        <downloadUrl>https://github.com/felix-t-morgenstern/inaugural.soliloquy.gamestate</downloadUrl>
    </distributionManagement>

    <repositories>
        <repository>
            <id>github-mvn-repo</id>
            <url>https://raw.githubusercontent.com/felix-t-morgenstern/soliloquy.artifacts/master/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>5.1.0</version>
        </dependency>
        <dependency>
            <groupId>disorg.soliloquy</groupId>
            <artifactId>soliloquy.specs</artifactId>
            <version>0.0.442</version>
        </dependency>
        <dependency>
            <groupId>disorg.soliloquy</groupId>
            <artifactId>inaugural.soliloquy.tools</artifactId>
            <version>0.0.116</version>
        </dependency>
        <dependency>
            <groupId>disorg.soliloquy</groupId>
            <artifactId>inaugural.soliloquy.common</artifactId>
            <version>0.0.19</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>5.0.0</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>4.8.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <inceptionYear>2019</inceptionYear>

</project>
